# sai-suite

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCS-QUICK-REFERENCE.md  Dockerfile  LICENSE  MANIFEST.in  MONOREPO.md  Makefile  QUICK-START.md  README.md  RELEASE-CHECKLIST.md  pyproject.toml  test_click.py  test_saidata.yaml
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
docker/: README.md
docs/: MIGRATION.md  README.md  SAIDATA_0.3_FEATURES.md  TESTING-QUICKSTART.md  VERSION-MANAGEMENT.md  api-reference.md  architecture-diagram.md  command-reference.md  configuration-guide.md  configuration-samples.md  generation-engine-best-practices.md  generation-logging.md  installation.md  project-structure.md  repository-management.md  repository-migration-guide.md  repository-parser-improvements.md  repository-types.md  sai-apply-command.md  sai-config-sample.yaml  saidata-0.3-migration-guide.md  saigen-config-sample.yaml  specialized-providers-roadmap.md  stats-command.md  template-engine-implementation.md  testing-guide.md  troubleshooting.md  when-to-use-what.md
examples/: README.md  action-file-example.yaml  execution_engine_demo.py  generation_engine_demo.py  llm_provider_demo.py  repository-config.yaml  retry_generation_example.py  saidata_validation_demo.py  security_demo.py  test-flexible-actions.yaml
providers/: README.md  apk.yaml  apt.yaml  binary.yaml  brew.yaml  cargo.yaml  choco.yaml  composer.yaml  dnf.yaml  docker.yaml  emerge.yaml  flatpak.yaml  gem.yaml  go.yaml  gradle.yaml  guix.yaml  helm.yaml  herd.yaml  init-d.yaml  launchctl.yaml  maven.yaml  nix.yaml  nixpkgs.yaml  npm.yaml  nuget.yaml  opkg.yaml  pacman.yaml  pkg.yaml  portage.yaml  pypi.yaml  rc-script.yaml  rc-service.yaml  sc.yaml  scoop.yaml  script.yaml  service.yaml  slackpkg.yaml  snap.yaml  source.yaml  spack.yaml  (+6 more)
sai/: README.md  __init__.py  _version.py  pyproject.toml  version.py
sai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sai/cli/: __init__.py  completion.py  main.py
sai/core/: __init__.py  action_executor.py  action_loader.py  execution_engine.py  git_repository_handler.py  repository_cache.py  saidata_loader.py  saidata_path.py  saidata_repository_manager.py  tarball_repository_handler.py
sai/docs/: README.md  cli-reference.md  schema-0.3-guide.md  template-engine.md
sai/docs/examples/: README.md  sai-config-sample.yaml  saidata-binary-download.yaml  saidata-schema-0.3-complete.yaml  saidata-script-install.yaml  saidata-simple-package.yaml  saidata-source-build.yaml
sai/docs/examples/action-files/: README.md  example.json  extra-params.yaml  flexible.yaml  simple.yaml
sai/models/: __init__.py  actions.py  config.py  provider_data.py  saidata.py
sai/providers/: README.md  __init__.py  base.py  loader.py  template_engine.py
sai/utils/: __init__.py  cache.py  config.py  credentials.py  errors.py  execution_tracker.py  logging.py  output_formatter.py  security.py  system.py
saidata/: ansible.yaml  git.yaml  mongodb.yaml  nginx-ingress.yaml  nodejs.yaml  postgresql.yaml  python.yaml  redis.yaml  vault.yaml  vscode.yaml
saigen/: README.md  __init__.py  __main__.py  _version.py  pyproject.toml  version.py
saigen/cli/: __init__.py  main.py  repositories.py
saigen/cli/commands/: __init__.py  batch.py  cache.py  config.py  generate.py  index.py  quality.py  refresh_versions.py  test.py  test_system.py  update.py  validate.py
saigen/core/: __init__.py  advanced_validator.py  batch_engine.py  context_builder.py  context_builder_v03.py  generation_engine.py  override_validator.py  tester.py  update_engine.py  url_filter.py  validator.py
saigen/docs/: README.md  TESTING-QUICKSTART.md  URL-FEATURE-README.md  cli-reference.md  configuration-guide.md  gb10-deployment-guide.md  generation-engine.md  generation-logging.md  multi-provider-guide.md  rag-indexing-guide.md  refresh-versions-command.md  refresh-versions-quick-reference.md  refresh-versions-troubleshooting.md  repository-configuration-guide.md  repository-configuration.md  repository-troubleshooting.md  retry-generation-feature.md  saidata-provider-mapping-standard.md  saidata-structure-guide.md  testing-guide.md  upstream-repositories-guide.md  url-filter-quick-reference.md  url-validation-filter.md  vllm-dgx-setup.md  vllm-quick-start.md
saigen/docs/examples/: README-quality-score.md  quality-score-automation.sh  saigen-config-sample.yaml  vllm-config-dgx.yaml
saigen/docs/examples/repository-configs/: README.md  comprehensive-example.yaml
saigen/docs/examples/software_lists/test_sets/: test_10_basic2.txt  test_10_basic3.txt  test_current.txt
saigen/docs/examples/testing/: README.md  nginx-example.yaml  test-local.sh
saigen/llm/: __init__.py  prompts.py  prompts_v03.py  provider_manager.py
saigen/llm/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  vllm.py
saigen/models/: __init__.py  config.py  generation.py  repository.py  saidata.py
saigen/repositories/: __init__.py  cache.py  codename_resolver.py  config.py  etl.py  indexer.py  manager.py  universal_manager.py
saigen/repositories/configs/: README.md  apk.yaml  apt.yaml  brew.yaml  cargo.yaml  choco.yaml  composer.yaml  dnf.yaml  docker-apt.yaml  emerge.yaml  flatpak.yaml  gem.yaml  hashicorp-apt.yaml  language-repositories.yaml  linux-repositories.yaml  macos-repositories.yaml  maven.yaml  nix.yaml  npm.yaml  nuget.yaml  pacman.yaml  pip.yaml  snap.yaml  windows-repositories.yaml  winget.yaml  zypper.yaml
saigen/repositories/downloaders/: __init__.py  api_downloader.py  base.py  generic.py  universal.py
saigen/repositories/parsers/: __init__.py  github.py  rpm_parser.py
saigen/testing/: README.md  __init__.py  models.py  reporter.py  runner.py  validator.py
saigen/utils/: __init__.py  checksum_validator.py  config.py  errors.py  generation_logger.py  path_utils.py  url_templating.py
schemas/: actions-0.1-schema.json  applydata-0.1-schema.json  providerdata-0.1-schema.json  repository-config-schema.json  (+2 more)
(+396 files in other folders)
