[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sai"
version = "0.1.0"
description = "SAI Software Management Suite: CLI tool (sai) and AI-powered generation tool (saigen)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SAI Team", email = "team@sai.software"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.3.0",
]
rag = [
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.21.0",
]

[project.urls]
Homepage = "https://sai.software"
Documentation = "https://sai.software/docs"
Repository = "https://github.com/example42/sai"
Issues = "https://github.com/example42/sai/issues"

[project.scripts]
saigen = "saigen.cli.main:main"
sai = "sai.cli.main:main"

[tool.setuptools.packages.find]
include = ["saigen*", "sai*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true