[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sai"
dynamic = ["version"]
description = "SAI: Lightweight CLI for executing software management actions"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "SAI Team", email = "team@sai.software"}
]
maintainers = [
    {name = "SAI Team", email = "team@sai.software"}
]
keywords = [
    "software-management",
    "package-manager",
    "cli-tool",
    "devops",
    "automation",
    "cross-platform",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Software Distribution",
    "Topic :: System :: Installation/Setup",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.8"

# Core dependencies - minimal for SAI execution
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "click>=8.0.0,<9.0.0",
    "pyyaml>=6.0,<7.0",
    "httpx>=0.24.0,<1.0.0",
    "rich>=13.0.0,<14.0.0",
    "jsonschema>=4.0.0,<5.0.0",
    "jinja2>=3.0.0,<4.0.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
# Include saigen for generation capabilities
generation = [
    "saigen>=0.1.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "black>=23.0.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "flake8>=6.0.0,<7.0.0",
    "mypy>=1.0.0,<2.0.0",
    "pre-commit>=3.0.0,<4.0.0",
]

# Testing only
test = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
]

# All optional features
all = [
    "sai[generation,dev]",
]

[project.urls]
Homepage = "https://sai.software"
Documentation = "https://sai.software/docs"
Repository = "https://github.com/example42/sai-suite"
Issues = "https://github.com/example42/sai-suite/issues"
Changelog = "https://github.com/example42/sai-suite/blob/main/CHANGELOG.md"
"Bug Reports" = "https://github.com/example42/sai-suite/issues"
"Source Code" = "https://github.com/example42/sai-suite"
"Download" = "https://pypi.org/project/sai/"

[project.scripts]
sai = "sai.cli.main:main"

[project.entry-points."sai.providers"]
# Entry point for provider plugins (future extensibility)

[tool.setuptools]
zip-safe = false
include-package-data = true
# Explicitly list the package - flat layout where package root is current dir
packages = ["sai"]

[tool.setuptools.package-dir]
# Map the package name to the directory containing it
# Empty string means current directory
sai = "."

[tool.setuptools.package-data]
sai = ["py.typed", "*.yaml", "*.yml", "*.json"]

[tool.setuptools_scm]
root = ".."
write_to = "_version.py"
version_scheme = "post-release"
local_scheme = "dirty-tag"
