[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "saigen"
dynamic = ["version"]
description = "SAIGEN - SAI Data Generation: AI-powered tool for generating and managing software metadata"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SAI Team", email = "team@sai.software"}
]
maintainers = [
    {name = "SAI Team", email = "team@sai.software"}
]
keywords = [
    "metadata-generation",
    "ai-generation",
    "package-metadata",
    "software-catalog",
    "devops",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.8"

# Core dependencies for saigen
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "click>=8.0.0,<9.0.0",
    "pyyaml>=6.0,<7.0",
    "httpx>=0.24.0,<1.0.0",
    "aiohttp>=3.8.0,<4.0.0",
    "aiofiles>=23.0.0,<24.0.0",
    "rich>=13.0.0,<14.0.0",
    "jsonschema>=4.0.0,<5.0.0",
    "jinja2>=3.0.0,<4.0.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
# LLM provider support
llm = [
    "openai>=1.0.0,<2.0.0",
    "anthropic>=0.3.0,<1.0.0",
]

# RAG (Retrieval-Augmented Generation) support
rag = [
    "sentence-transformers>=2.2.0,<3.0.0",
    "faiss-cpu>=1.7.0,<2.0.0",
    "numpy>=1.21.0,<2.0.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "black>=23.0.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "flake8>=6.0.0,<7.0.0",
    "mypy>=1.0.0,<2.0.0",
    "pre-commit>=3.0.0,<4.0.0",
]

# Testing only
test = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
]

# All optional features
all = [
    "saigen[llm,rag,dev]",
]

[project.urls]
Homepage = "https://sai.software"
Documentation = "https://sai.software/docs/saigen"
Repository = "https://github.com/example42/sai-suite"
Issues = "https://github.com/example42/sai-suite/issues"
Changelog = "https://github.com/example42/sai-suite/blob/main/CHANGELOG.md"
"Bug Reports" = "https://github.com/example42/sai-suite/issues"
"Source Code" = "https://github.com/example42/sai-suite"
"Download" = "https://pypi.org/project/saigen/"

[project.scripts]
saigen = "saigen.cli.main:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["saigen*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
saigen = ["py.typed", "*.yaml", "*.yml", "*.json"]

[tool.setuptools_scm]
root = ".."
write_to = "saigen/_version.py"
version_scheme = "post-release"
local_scheme = "dirty-tag"
